--- a/day4.ipynb
+++ b/day4.ipynb
@@ -143,9 +143,9 @@
    "hash": "1241c3981591ab042117ccef0cb49c926c79b178e9018f5d2702d050992445dc"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:MyPytorchTest]",
+   "name": "python3",
    "language": "python",
-   "name": "conda-env-MyPytorchTest-py"
+   "display_name": "Python 3 (ipykernel)"
   },
   "language_info": {
    "codemirror_mode": {
