--- a/day5.ipynb
+++ b/day5.ipynb
@@ -220,8 +220,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.9.6 64-bit ('venv': venv)"
+   "name": "python3811jvsc74a57bd009c23d22a706fc12b1062908fd09cfecb2172be0b70fdbd727d2263e91aafcc4",
+   "language": "python",
+   "display_name": "Python 3.8.11 64-bit ('MT': conda)"
   },
   "language_info": {
    "codemirror_mode": {
