--- a/NiN.ipynb
+++ b/NiN.ipynb
@@ -36,8 +36,8 @@
     "def nin_block(in_channels, out_channels, kernel_size, strides, padding):\n",
     "    return nn.Sequential(\n",
     "        nn.Conv2d(in_channels, out_channels, kernel_size, strides, padding),\n",
-    "        nn.ReLU(), nn.Conv2d(out_channels, out_channels, kernel_size=1),\n",
-    "        nn.ReLU(), nn.Conv2d(out_channels, out_channels, kernel_size=1),\n",
+    "        nn.ReLU(), nn.Conv2d(out_channels, out_channels, kernel_size=1),  # 1x1 conv\n",
+    "        nn.ReLU(), nn.Conv2d(out_channels, out_channels, kernel_size=1),  # 1x1 conv\n",
     "        nn.ReLU())\n"
    ],
    "outputs": [],
